// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stage summary component should not show the empty address lines 1`] = `
Array [
  <h2
    class="govuk-heading-m"
  >
    Active stages
  </h2>,
  <table
    class="govuk-table margin-left--small"
  >
    <caption
      class="govuk-table__caption margin-bottom--small"
    >
      __stage1__
    </caption>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Team
        </th>
        <td
          class="govuk-table__cell"
        >
          __assignedTeam__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          User
        </th>
        <td
          class="govuk-table__cell"
        >
          __assignedUser__
        </td>
      </tr>
    </tbody>
  </table>,
  <table
    class="govuk-table margin-left--small"
  >
    <caption
      class="govuk-table__caption margin-bottom--small"
    >
      __stage2__
    </caption>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Team
        </th>
        <td
          class="govuk-table__cell"
        >
          __assignedTeam__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          User
        </th>
        <td
          class="govuk-table__cell"
        >
          __assignedUser__
        </td>
      </tr>
    </tbody>
  </table>,
  <h2
    class="govuk-heading-m"
  >
    Case
  </h2>,
  <table
    class="govuk-table margin-left--small"
  >
    <caption
      class="govuk-table__caption margin-bottom--small"
    >
      Summary
    </caption>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Date received
        </th>
        <td
          class="govuk-table__cell"
        >
          __received__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Created
        </th>
        <td
          class="govuk-table__cell"
        >
          __created__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Deadline
        </th>
        <td
          class="govuk-table__cell"
        >
          __deadline__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Primary topic
        </th>
        <td
          class="govuk-table__cell"
        >
          __primaryTopic__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Primary correspondent
        </th>
        <td
          class="govuk-table__cell"
        >
          <span>
            __fullname__
          </span>
           
          <br />
           
          <span>
            __address1__
          </span>
            
          <br />
           
          <span>
            __postcode__
          </span>
            
          <br />
           
          <span>
            __country__
          </span>
           
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          __label__
        </th>
        <td
          class="govuk-table__cell"
        >
          __value__
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          __label__
        </th>
        <td
          class="govuk-table__cell"
        >
          __value__
        </td>
      </tr>
    </tbody>
  </table>,
  <table
    class="govuk-table margin-left--small"
  >
    <caption
      class="govuk-table__caption margin-bottom--small"
    >
      Stage deadlines
    </caption>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          __label__
        </th>
        <td
          class="govuk-table__cell"
        >
          __value__
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          __label__
        </th>
        <td
          class="govuk-table__cell"
        >
          __value__
        </td>
      </tr>
    </tbody>
  </table>,
]
`;

exports[`Stage summary component should render when summary provided in context 1`] = `
Array [
  <h2
    class="govuk-heading-m"
  >
    Active stages
  </h2>,
  <table
    class="govuk-table margin-left--small"
  >
    <caption
      class="govuk-table__caption margin-bottom--small"
    >
      __stage1__
    </caption>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Team
        </th>
        <td
          class="govuk-table__cell"
        >
          __assignedTeam__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          User
        </th>
        <td
          class="govuk-table__cell"
        >
          __assignedUser__
        </td>
      </tr>
    </tbody>
  </table>,
  <table
    class="govuk-table margin-left--small"
  >
    <caption
      class="govuk-table__caption margin-bottom--small"
    >
      __stage2__
    </caption>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Team
        </th>
        <td
          class="govuk-table__cell"
        >
          __assignedTeam__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          User
        </th>
        <td
          class="govuk-table__cell"
        >
          __assignedUser__
        </td>
      </tr>
    </tbody>
  </table>,
  <h2
    class="govuk-heading-m"
  >
    Case
  </h2>,
  <table
    class="govuk-table margin-left--small"
  >
    <caption
      class="govuk-table__caption margin-bottom--small"
    >
      Summary
    </caption>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Date received
        </th>
        <td
          class="govuk-table__cell"
        >
          __received__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Created
        </th>
        <td
          class="govuk-table__cell"
        >
          __created__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Deadline
        </th>
        <td
          class="govuk-table__cell"
        >
          __deadline__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Primary topic
        </th>
        <td
          class="govuk-table__cell"
        >
          __primaryTopic__
        </td>
      </tr>
      <tr
        class="govuk-table__cell"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          Primary correspondent
        </th>
        <td
          class="govuk-table__cell"
        >
          <span>
            __fullname__
          </span>
           
          <br />
           
          <span>
            __address1__
          </span>
            
          <br />
           
          <span>
            __address2__
          </span>
            
          <br />
           
          <span>
            __address3__
          </span>
            
          <br />
           
          <span>
            __postcode__
          </span>
            
          <br />
           
          <span>
            __country__
          </span>
           
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          __label__
        </th>
        <td
          class="govuk-table__cell"
        >
          __value__
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          __label__
        </th>
        <td
          class="govuk-table__cell"
        >
          __value__
        </td>
      </tr>
    </tbody>
  </table>,
  <table
    class="govuk-table margin-left--small"
  >
    <caption
      class="govuk-table__caption margin-bottom--small"
    >
      Stage deadlines
    </caption>
    <tbody
      class="govuk-table__body"
    >
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          __label__
        </th>
        <td
          class="govuk-table__cell"
        >
          __value__
        </td>
      </tr>
      <tr
        class="govuk-table__row"
      >
        <th
          class="govuk-table__header padding-left--small govuk-!-width-one-third"
        >
          __label__
        </th>
        <td
          class="govuk-table__cell"
        >
          __value__
        </td>
      </tr>
    </tbody>
  </table>,
]
`;
